On worked with portion I still need to fix view resume and the alignment of the top two logos

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   min-height: 100vh;
   width: 100vw;
-  margin: -10px;
   padding: 0;
   clear: both;
   background-color: #f4f5f5;
