--- a/src/app/app-navigation/app-navigation.component.scss
+++ b/src/app/app-navigation/app-navigation.component.scss
@@ -1,3 +1,7 @@
+.side-nav {
+  overflow-y: hidden;
+}
+
 ul {
   list-style-type: none;
   margin-top: 80px;
@@ -12,9 +16,6 @@ a {
   font-family: helvetica, "sans serif";
   font-size: 2.3rem;
   text-align: center;
-}
-
-a {
   text-decoration: none;
   color: white;
   outline: 0;
