--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -18,9 +18,6 @@
   box-sizing: border-box;
   height: 100vh;
   width: 100vw;
-  margin: -10px;
-  margin-bottom: -10px;
-  padding: 0;
   clear: both;
   background-color: royalblue;
   a, a:visited, a:hover, a:active {
@@ -37,11 +34,6 @@
     padding: 20vmin 10vmin;
     color: white;
     font-size: 1.4rem;
-  }
-
-  h1 {
-    color: white;
-    font-size: 2.7rem;
   }
 
   .scroll-prompter {
@@ -109,10 +101,8 @@
 .skill-logos-container {
   height: 88vh;
   width: 90vw;
-  margin: -10px;
   padding: 15vh 5vw;
   padding-top: 5vh;
-  margin-right: 2vw;
   background-color: #f4f5f5;
   .skill-logos {
     padding: 10vmin 5vmin;
@@ -144,13 +134,6 @@
     background-color: #f4f5f5;
     border-color: black;
   }
-  h1 {
-  font-size: 2.75rem;
-  }
-
-  div.icon-bar {
-    background-color: black;
-  }
 
   .skill-logo-img {
     margin: 0.5rem 0.5rem;
@@ -171,13 +154,56 @@
 
 .employer-logos-container {
   position: relative;
+  height: 90vh;
+
   .employer-logo-img {
-    margin: 2rem 0;
+    margin: 2.2rem 2rem;
+    width: 20rem;
+  }
+
+  .home-page-section-content {
+    padding: 5vmin 10vmin;
+  }
+
+  .employer-logo-row {
+    text-align: center;
+  }
+
+  hr {
+    display: block;
+    unicode-bidi: isolate;
+    -webkit-margin-before: 0.5em;
+    -webkit-margin-after: 0.5em;
+    -webkit-margin-start: auto;
+    -webkit-margin-end: auto;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 1px;
+  }
+
+  p a, p a:visited, p a:hover, p a:active {
+    color: purple;
+    outline: 0;
+  }
+
+  a {
+    color: black;
   }
 }
 
 .blog-link {
-  position: relative;
+  a {
+    position: relative;
+    top: 30%;
+    transform: translateY(-50%);
+  }
+
+  background-color: royalblue;
+  height: 30vh;
+  width: 100vw;
+  text-align: center;
+  font-size: 4rem;
+  margin-bottom: 10vh;
 }
 
 @include keyframes(arrowBounce) {
