--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -2,11 +2,7 @@
   box-sizing: border-box;
   height: 100%;
   width: 100vw;
-  margin: -10px;
-  clear: both;
   background-color: #f4f5f5;
-  margin: -10px;
-  padding: 0;
   overflow-x: hidden;
   h1 {
     font-size: 2.75rem;
@@ -25,7 +21,7 @@
 
     #resume-embed {
       max-width: 90vw;
-      height: 180vh;
+      height: 155vh;
       width: 50vw;
       border: none;
       box-shadow: 0 0 5px
